# visual-hyde

./: .env.example  README.md  Visual-HyDE-Presentation.pptx  dashboard.py  main.py  pyproject.toml
experiments/: phase1_main.py  phase2_ablation.py  phase3_hybrid.py
results/chartqa/20260419_171827/: results.json
results/vidore_v2/20260419_232635/: results.json
results/vidore_v2/20260419_235242/: results.json
results/vidore_v2/20260420_000251/: results.json  visual_hyde_matplotlib_generation_failures.jsonl
results/vidore_v2/20260420_002020_arxivqa/: results.json
scripts/: precompute_colpali.py
src/visual_hyde/: __init__.py  cli.py  config.py  llm_client.py  logging.py  types.py
src/visual_hyde/baselines/: __init__.py  colpali.py  tcd_hyde.py
src/visual_hyde/embedding/: clip_encoder.py  corpus_index.py
src/visual_hyde/evaluation/: __init__.py  metrics.py  runner.py
src/visual_hyde/generation/: __init__.py  image_gen.py  matplotlib_gen.py  prompts.py
src/visual_hyde/retrieval/: base.py  hybrid.py  text_retriever.py  visual_retriever.py
